# undertide

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-docker.yml  main.yml  release.yml
undertide/: callable_main.py  main.py
undertide/.env/: test
undertide/src/: logger.py  main.py  timing.py
undertide/src/util/: bigquery.py  gcp_secret_manager.py  gcs.py  parse_config.py  s3.py  sftp.py
undertide/src/util/config_readers/: reports_config.py
undertide/src/util/pullers/: bigquery.py  duckdb.py  file.py  mysql.py  postgres.py  py_file.py  redshift.py  report_generator.py  snowlake.py
undertide/src/util/pushers/: report_deliverer.py  send.py
undertide/src/util/reports/: reports.py
undertide/src/util/secrets/: aws_secret_manager.py  aws_secrets_manager.py  gcp_secret_manager.py  gcp_secrets_manager.py  secrets.py  secrets_manager.py
undertide/src/util/writers/: report_writer.py
undertide/tests/unit/data/: service_account.json
undertide/tests/unit/util/: test_gcp_secret_manager.py  test_sftp.py  test_timing.py
undertide/tests/unit/util/pullers/: test_bigquery.py  test_mysql.py  test_postgres.py  test_py_file.py  test_redshift.py  test_report_generator.py  test_snowflake.py
undertide/tests/unit/util/secrets/: test_aws_secrets_manager.py  test_gcp_secrets_manager.py  test_secrets_manager.py
